testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment5.errors.txt
b.js(3,12): error TS2503: Cannot find namespace 'MC'.


==== a.js (0 errors) ====
    export default function MyClass() {
    }
    MyClass.bar = class C {
    }
    MyClass.bar
    
==== b.js (1 errors) ====
    import MC from './a'
    MC.bar
    /** @type {MC.bar} */
               ~~
!!! error TS2503: Cannot find namespace 'MC'.
    var x
    